--- a/Lab7/Base.lproj/Main.storyboard
+++ b/Lab7/Base.lproj/Main.storyboard
@@ -22,6 +22,67 @@
             </objects>
             <point key="canvasLocation" x="26" y="654"/>
         </scene>
+        <!--Customize View Controller-->
+        <scene sceneID="dwW-go-iDJ">
+            <objects>
+                <viewController id="vkh-1o-2Sx" customClass="CustomizeViewController" customModule="Lab7" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="IHy-RV-MiV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="85p-2p-2WD">
+                                <rect key="frame" x="1" y="44" width="375" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dhA-Hf-gVw">
+                                <rect key="frame" x="1" y="268" width="375" height="34"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="buttonLabelChanged:" destination="vkh-1o-2Sx" eventType="editingChanged" id="7wH-Va-Oie"/>
+                                </connections>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RAR-St-1GK">
+                                <rect key="frame" x="0.0" y="319" width="109" height="29"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Bold"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FS5-Tl-aib">
+                                <rect key="frame" x="123" y="319" width="131" height="30"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Italics"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9z6-oN-3wr">
+                                <rect key="frame" x="269" y="318" width="106" height="30"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Underline"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="iUV-6h-4VZ"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="fNK-vH-lBI">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="bNW-5w-tm0">
+                            <connections>
+                                <segue destination="BDn-XG-aLl" kind="unwind" unwindAction="unwindToDocumentViewControllerWithSender:" id="xy0-MS-omV"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="boldButton" destination="RAR-St-1GK" id="Ngp-fw-IoE"/>
+                        <outlet property="buttonLabel" destination="dhA-Hf-gVw" id="BYL-JB-Oxe"/>
+                        <outlet property="italicsButton" destination="FS5-Tl-aib" id="x6L-oY-Sqs"/>
+                        <outlet property="picker" destination="85p-2p-2WD" id="e06-8c-sAG"/>
+                        <outlet property="underlineButton" destination="9z6-oN-3wr" id="dvC-kn-bdX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hUK-uf-nup" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="BDn-XG-aLl" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2759.1999999999998" y="653.52323838080963"/>
+        </scene>
         <!--Document View Controller-->
         <scene sceneID="dkP-xk-x6W">
             <objects>
@@ -31,10 +92,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="2l7-xg-u1v">
-                                <rect key="frame" x="83.5" y="20" width="208" height="83.5"/>
+                                <rect key="frame" x="33.5" y="20" width="308.5" height="137.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="firstBaseline" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Jzy-az-Q3G">
-                                        <rect key="frame" x="0.0" y="0.0" width="208" height="20.5"/>
+                                        <rect key="frame" x="50" y="0.0" width="208" height="20.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filename" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TDw-Fo-hfZ">
                                                 <rect key="frame" x="0.0" y="0.0" width="69" height="20.5"/>
@@ -50,8 +111,54 @@
                                             </label>
                                         </subviews>
                                     </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Ehp-7n-XHy">
+                                        <rect key="frame" x="0.0" y="44.5" width="308.5" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lOM-wr-BXl">
+                                                <rect key="frame" x="0.0" y="0.0" width="46" height="30"/>
+                                                <state key="normal" title="Style 1"/>
+                                                <connections>
+                                                    <action selector="style1ButtonPressed:" destination="M2k-L8-Olo" eventType="touchDown" id="asT-HJ-bnL"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IXy-iu-pcW">
+                                                <rect key="frame" x="54" y="0.0" width="48" height="30"/>
+                                                <state key="normal" title="Style 2"/>
+                                                <connections>
+                                                    <action selector="style2ButtonPressed:" destination="M2k-L8-Olo" eventType="touchDown" id="T6s-9G-paH"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N6c-jT-eNd">
+                                                <rect key="frame" x="110" y="0.0" width="48" height="30"/>
+                                                <state key="normal" title="Style 3"/>
+                                                <connections>
+                                                    <action selector="style3ButtonPressed:" destination="M2k-L8-Olo" eventType="touchDown" id="947-mH-Zb1"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="shi-j2-Xe3">
+                                                <rect key="frame" x="166" y="0.0" width="48" height="30"/>
+                                                <state key="normal" title="Style 4"/>
+                                                <connections>
+                                                    <action selector="style4ButtonPressed:" destination="M2k-L8-Olo" eventType="touchDown" id="rPg-Lq-0wX"/>
+                                                </connections>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="|" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sFD-zp-OzK">
+                                                <rect key="frame" x="222" y="0.0" width="5.5" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UsK-gI-La7">
+                                                <rect key="frame" x="235.5" y="0.0" width="73" height="30"/>
+                                                <state key="normal" title="Customize"/>
+                                                <connections>
+                                                    <segue destination="3FW-JL-wDZ" kind="show" identifier="ShowController" id="tvm-wI-xdE"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WAb-IC-g0u">
-                                        <rect key="frame" x="78.5" y="44.5" width="51" height="39"/>
+                                        <rect key="frame" x="128.5" y="98.5" width="51" height="39"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                         <state key="normal" title="Done"/>
                                         <connections>
@@ -61,7 +168,7 @@
                                 </subviews>
                             </stackView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" usesAttributedText="YES" allowsEditingTextAttributes="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uwd-jl-1Xm">
-                                <rect key="frame" x="0.0" y="126" width="375" height="541"/>
+                                <rect key="frame" x="0.0" y="180" width="375" height="438"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <attributedString key="attributedText">
                                     <fragment>
@@ -87,14 +194,39 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="BoZ-jc-2Y8"/>
                     </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="documentNameLabel" destination="s46-Uc-0IM" id="S9N-4c-eHT"/>
+                        <outlet property="style1Button" destination="lOM-wr-BXl" id="7zK-vV-rYA"/>
+                        <outlet property="style2Button" destination="IXy-iu-pcW" id="pYN-Lb-oVU"/>
+                        <outlet property="style3Button" destination="N6c-jT-eNd" id="KE9-Jw-yoL"/>
+                        <outlet property="style4Button" destination="shi-j2-Xe3" id="qee-N4-ec1"/>
                         <outlet property="textView" destination="uwd-jl-1Xm" id="f85-zZ-kgO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rl9-ES-qQn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1029.5999999999999" y="653.52323838080963"/>
+            <point key="canvasLocation" x="894" y="654"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="hq0-EF-pcU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3FW-JL-wDZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="ERu-VE-6uI"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bnV-fg-1io">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vkh-1o-2Sx" kind="relationship" relationship="rootViewController" id="JN2-Uh-eLE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VcW-x2-B9E" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1820" y="653.52323838080963"/>
         </scene>
     </scenes>
 </document>
